gpt_cap/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    HASH

Grammar

Rule 0     S' -> scenario
Rule 1     scenario -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement NEWLINE statement_list
Rule 4     statement_list -> statement statement_list
Rule 5     statement_list -> NEWLINE statement_list
Rule 6     statement_list -> empty
Rule 7     statement -> action
Rule 8     statement -> all_action
Rule 9     statement -> assignment
Rule 10    statement -> if_statement
Rule 11    statement -> wait_statement
Rule 12    statement -> break_statement
Rule 13    statement -> compound_statement
Rule 14    tag_list -> TAG
Rule 15    tag_list -> tag_list TAG
Rule 16    tag_expression -> LPAREN tag_list RPAREN
Rule 17    expression -> tag_expression DOT IDENTIFIER
Rule 18    expression -> tag_expression DOT IDENTIFIER LPAREN input RPAREN
Rule 19    expression -> tag_expression DOT IDENTIFIER LPAREN RPAREN
Rule 20    action -> LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
Rule 21    action -> LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
Rule 22    all_action -> ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
Rule 23    all_action -> ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
Rule 24    expression -> expression AND expression
Rule 25    expression -> expression OR expression
Rule 26    expression -> ALL LPAREN tag_list RPAREN DOT IDENTIFIER
Rule 27    expression -> expression PERCENT
Rule 28    assignment -> IDENTIFIER ASSIGN expression
Rule 29    assignment -> IDENTIFIER DECLARE expression
Rule 30    expression -> IDENTIFIER
Rule 31    expression -> INTEGER
Rule 32    expression -> TRUE
Rule 33    expression -> FALSE
Rule 34    expression -> DOUBLE
Rule 35    expression -> STRING_LITERAL
Rule 36    expression -> expression PLUS expression
Rule 37    expression -> expression MINUS expression
Rule 38    expression -> expression TIMES expression
Rule 39    expression -> expression DIVIDE expression
Rule 40    input -> expression
Rule 41    input -> input COMMA expression
Rule 42    compound_statement -> LBRACE statement_list RBRACE
Rule 43    if_statement -> IF LPAREN condition_list RPAREN compound_statement else_clause
Rule 44    else_clause -> ELSE statement
Rule 45    else_clause -> empty
Rule 46    statement -> DELAY LPAREN expression RPAREN
Rule 47    condition_list -> condition
Rule 48    condition_list -> LPAREN condition_list RPAREN
Rule 49    condition_list -> condition_list AND condition_list
Rule 50    condition_list -> condition_list OR condition_list
Rule 51    condition_list -> ANY condition_list
Rule 52    condition_list -> ALL condition_list
Rule 53    condition_list -> NOT condition
Rule 54    condition -> expression GE expression
Rule 55    condition -> expression LE expression
Rule 56    condition -> expression EQ expression
Rule 57    condition -> expression NE expression
Rule 58    condition -> expression GT expression
Rule 59    condition -> expression LT expression
Rule 60    wait_statement -> WAIT_UNTIL LPAREN condition_list RPAREN
Rule 61    wait_statement -> WAIT_UNTIL LPAREN period_time RPAREN
Rule 62    period_time -> INTEGER time_unit
Rule 63    time_unit -> MILLISECOND
Rule 64    time_unit -> SECOND
Rule 65    time_unit -> MINUTE
Rule 66    time_unit -> HOUR
Rule 67    time_unit -> DAY
Rule 68    empty -> <empty>
Rule 69    break_statement -> BREAK

Terminals, with rules where they appear

ALL                  : 22 23 26 52
AND                  : 24 49
ANY                  : 51
ASSIGN               : 28
BREAK                : 69
COMMA                : 41
DAY                  : 67
DECLARE              : 29
DELAY                : 46
DIVIDE               : 39
DOT                  : 17 18 19 20 21 22 23 26
DOUBLE               : 34
ELSE                 : 44
EQ                   : 56
FALSE                : 33
GE                   : 54
GT                   : 58
HASH                 : 
HOUR                 : 66
IDENTIFIER           : 17 18 19 20 21 22 23 26 28 29 30
IF                   : 43
INTEGER              : 31 62
LBRACE               : 42
LE                   : 55
LPAREN               : 16 18 19 20 20 21 21 22 22 23 23 26 43 46 48 60 61
LT                   : 59
MILLISECOND          : 63
MINUS                : 37
MINUTE               : 65
NE                   : 57
NEWLINE              : 3 5
NOT                  : 53
OR                   : 25 50
PERCENT              : 27
PLUS                 : 36
RBRACE               : 42
RPAREN               : 16 18 19 20 20 21 21 22 22 23 23 26 43 46 48 60 61
SECOND               : 64
STRING_LITERAL       : 35
TAG                  : 14 15
TIMES                : 38
TRUE                 : 32
WAIT_UNTIL           : 60 61
error                : 

Nonterminals, with rules where they appear

action               : 7
all_action           : 8
assignment           : 9
break_statement      : 12
compound_statement   : 13 43
condition            : 47 53
condition_list       : 43 48 49 49 50 50 51 52 60
else_clause          : 43
empty                : 6 45
expression           : 24 24 25 25 27 28 29 36 36 37 37 38 38 39 39 40 41 46 54 54 55 55 56 56 57 57 58 58 59 59
if_statement         : 10
input                : 18 21 23 41
period_time          : 61
scenario             : 0
statement            : 2 3 4 44
statement_list       : 1 3 4 5 42
tag_expression       : 17 18 19
tag_list             : 15 16 20 21 22 23 26
time_unit            : 62
wait_statement       : 11

Parsing method: LALR

state 0

    (0) S' -> . scenario
    (1) scenario -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement NEWLINE statement_list
    (4) statement_list -> . statement statement_list
    (5) statement_list -> . NEWLINE statement_list
    (6) statement_list -> . empty
    (7) statement -> . action
    (8) statement -> . all_action
    (9) statement -> . assignment
    (10) statement -> . if_statement
    (11) statement -> . wait_statement
    (12) statement -> . break_statement
    (13) statement -> . compound_statement
    (46) statement -> . DELAY LPAREN expression RPAREN
    (68) empty -> .
    (20) action -> . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (21) action -> . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (22) all_action -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (23) all_action -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (28) assignment -> . IDENTIFIER ASSIGN expression
    (29) assignment -> . IDENTIFIER DECLARE expression
    (43) if_statement -> . IF LPAREN condition_list RPAREN compound_statement else_clause
    (60) wait_statement -> . WAIT_UNTIL LPAREN condition_list RPAREN
    (61) wait_statement -> . WAIT_UNTIL LPAREN period_time RPAREN
    (69) break_statement -> . BREAK
    (42) compound_statement -> . LBRACE statement_list RBRACE

    NEWLINE         shift and go to state 4
    DELAY           shift and go to state 13
    $end            reduce using rule 68 (empty -> .)
    LPAREN          shift and go to state 14
    ALL             shift and go to state 16
    IDENTIFIER      shift and go to state 15
    IF              shift and go to state 17
    WAIT_UNTIL      shift and go to state 18
    BREAK           shift and go to state 19
    LBRACE          shift and go to state 20

    scenario                       shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    empty                          shift and go to state 5
    action                         shift and go to state 6
    all_action                     shift and go to state 7
    assignment                     shift and go to state 8
    if_statement                   shift and go to state 9
    wait_statement                 shift and go to state 10
    break_statement                shift and go to state 11
    compound_statement             shift and go to state 12

state 1

    (0) S' -> scenario .



state 2

    (1) scenario -> statement_list .

    $end            reduce using rule 1 (scenario -> statement_list .)


state 3

    (2) statement_list -> statement .
    (3) statement_list -> statement . NEWLINE statement_list
    (4) statement_list -> statement . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement NEWLINE statement_list
    (4) statement_list -> . statement statement_list
    (5) statement_list -> . NEWLINE statement_list
    (6) statement_list -> . empty
    (7) statement -> . action
    (8) statement -> . all_action
    (9) statement -> . assignment
    (10) statement -> . if_statement
    (11) statement -> . wait_statement
    (12) statement -> . break_statement
    (13) statement -> . compound_statement
    (46) statement -> . DELAY LPAREN expression RPAREN
    (68) empty -> .
    (20) action -> . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (21) action -> . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (22) all_action -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (23) all_action -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (28) assignment -> . IDENTIFIER ASSIGN expression
    (29) assignment -> . IDENTIFIER DECLARE expression
    (43) if_statement -> . IF LPAREN condition_list RPAREN compound_statement else_clause
    (60) wait_statement -> . WAIT_UNTIL LPAREN condition_list RPAREN
    (61) wait_statement -> . WAIT_UNTIL LPAREN period_time RPAREN
    (69) break_statement -> . BREAK
    (42) compound_statement -> . LBRACE statement_list RBRACE

  ! reduce/reduce conflict for $end resolved using rule 2 (statement_list -> statement .)
  ! reduce/reduce conflict for RBRACE resolved using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement .)
    NEWLINE         shift and go to state 21
    DELAY           shift and go to state 13
    LPAREN          shift and go to state 14
    ALL             shift and go to state 16
    IDENTIFIER      shift and go to state 15
    IF              shift and go to state 17
    WAIT_UNTIL      shift and go to state 18
    BREAK           shift and go to state 19
    LBRACE          shift and go to state 20

  ! $end            [ reduce using rule 68 (empty -> .) ]
  ! RBRACE          [ reduce using rule 68 (empty -> .) ]

    statement                      shift and go to state 3
    statement_list                 shift and go to state 22
    empty                          shift and go to state 5
    action                         shift and go to state 6
    all_action                     shift and go to state 7
    assignment                     shift and go to state 8
    if_statement                   shift and go to state 9
    wait_statement                 shift and go to state 10
    break_statement                shift and go to state 11
    compound_statement             shift and go to state 12

state 4

    (5) statement_list -> NEWLINE . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement NEWLINE statement_list
    (4) statement_list -> . statement statement_list
    (5) statement_list -> . NEWLINE statement_list
    (6) statement_list -> . empty
    (7) statement -> . action
    (8) statement -> . all_action
    (9) statement -> . assignment
    (10) statement -> . if_statement
    (11) statement -> . wait_statement
    (12) statement -> . break_statement
    (13) statement -> . compound_statement
    (46) statement -> . DELAY LPAREN expression RPAREN
    (68) empty -> .
    (20) action -> . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (21) action -> . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (22) all_action -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (23) all_action -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (28) assignment -> . IDENTIFIER ASSIGN expression
    (29) assignment -> . IDENTIFIER DECLARE expression
    (43) if_statement -> . IF LPAREN condition_list RPAREN compound_statement else_clause
    (60) wait_statement -> . WAIT_UNTIL LPAREN condition_list RPAREN
    (61) wait_statement -> . WAIT_UNTIL LPAREN period_time RPAREN
    (69) break_statement -> . BREAK
    (42) compound_statement -> . LBRACE statement_list RBRACE

    NEWLINE         shift and go to state 4
    DELAY           shift and go to state 13
    $end            reduce using rule 68 (empty -> .)
    RBRACE          reduce using rule 68 (empty -> .)
    LPAREN          shift and go to state 14
    ALL             shift and go to state 16
    IDENTIFIER      shift and go to state 15
    IF              shift and go to state 17
    WAIT_UNTIL      shift and go to state 18
    BREAK           shift and go to state 19
    LBRACE          shift and go to state 20

    statement_list                 shift and go to state 23
    statement                      shift and go to state 3
    empty                          shift and go to state 5
    action                         shift and go to state 6
    all_action                     shift and go to state 7
    assignment                     shift and go to state 8
    if_statement                   shift and go to state 9
    wait_statement                 shift and go to state 10
    break_statement                shift and go to state 11
    compound_statement             shift and go to state 12

state 5

    (6) statement_list -> empty .

    $end            reduce using rule 6 (statement_list -> empty .)
    RBRACE          reduce using rule 6 (statement_list -> empty .)


state 6

    (7) statement -> action .

    NEWLINE         reduce using rule 7 (statement -> action .)
    DELAY           reduce using rule 7 (statement -> action .)
    LPAREN          reduce using rule 7 (statement -> action .)
    ALL             reduce using rule 7 (statement -> action .)
    IDENTIFIER      reduce using rule 7 (statement -> action .)
    IF              reduce using rule 7 (statement -> action .)
    WAIT_UNTIL      reduce using rule 7 (statement -> action .)
    BREAK           reduce using rule 7 (statement -> action .)
    LBRACE          reduce using rule 7 (statement -> action .)
    $end            reduce using rule 7 (statement -> action .)
    RBRACE          reduce using rule 7 (statement -> action .)


state 7

    (8) statement -> all_action .

    NEWLINE         reduce using rule 8 (statement -> all_action .)
    DELAY           reduce using rule 8 (statement -> all_action .)
    LPAREN          reduce using rule 8 (statement -> all_action .)
    ALL             reduce using rule 8 (statement -> all_action .)
    IDENTIFIER      reduce using rule 8 (statement -> all_action .)
    IF              reduce using rule 8 (statement -> all_action .)
    WAIT_UNTIL      reduce using rule 8 (statement -> all_action .)
    BREAK           reduce using rule 8 (statement -> all_action .)
    LBRACE          reduce using rule 8 (statement -> all_action .)
    $end            reduce using rule 8 (statement -> all_action .)
    RBRACE          reduce using rule 8 (statement -> all_action .)


state 8

    (9) statement -> assignment .

    NEWLINE         reduce using rule 9 (statement -> assignment .)
    DELAY           reduce using rule 9 (statement -> assignment .)
    LPAREN          reduce using rule 9 (statement -> assignment .)
    ALL             reduce using rule 9 (statement -> assignment .)
    IDENTIFIER      reduce using rule 9 (statement -> assignment .)
    IF              reduce using rule 9 (statement -> assignment .)
    WAIT_UNTIL      reduce using rule 9 (statement -> assignment .)
    BREAK           reduce using rule 9 (statement -> assignment .)
    LBRACE          reduce using rule 9 (statement -> assignment .)
    $end            reduce using rule 9 (statement -> assignment .)
    RBRACE          reduce using rule 9 (statement -> assignment .)


state 9

    (10) statement -> if_statement .

    NEWLINE         reduce using rule 10 (statement -> if_statement .)
    DELAY           reduce using rule 10 (statement -> if_statement .)
    LPAREN          reduce using rule 10 (statement -> if_statement .)
    ALL             reduce using rule 10 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 10 (statement -> if_statement .)
    IF              reduce using rule 10 (statement -> if_statement .)
    WAIT_UNTIL      reduce using rule 10 (statement -> if_statement .)
    BREAK           reduce using rule 10 (statement -> if_statement .)
    LBRACE          reduce using rule 10 (statement -> if_statement .)
    $end            reduce using rule 10 (statement -> if_statement .)
    RBRACE          reduce using rule 10 (statement -> if_statement .)


state 10

    (11) statement -> wait_statement .

    NEWLINE         reduce using rule 11 (statement -> wait_statement .)
    DELAY           reduce using rule 11 (statement -> wait_statement .)
    LPAREN          reduce using rule 11 (statement -> wait_statement .)
    ALL             reduce using rule 11 (statement -> wait_statement .)
    IDENTIFIER      reduce using rule 11 (statement -> wait_statement .)
    IF              reduce using rule 11 (statement -> wait_statement .)
    WAIT_UNTIL      reduce using rule 11 (statement -> wait_statement .)
    BREAK           reduce using rule 11 (statement -> wait_statement .)
    LBRACE          reduce using rule 11 (statement -> wait_statement .)
    $end            reduce using rule 11 (statement -> wait_statement .)
    RBRACE          reduce using rule 11 (statement -> wait_statement .)


state 11

    (12) statement -> break_statement .

    NEWLINE         reduce using rule 12 (statement -> break_statement .)
    DELAY           reduce using rule 12 (statement -> break_statement .)
    LPAREN          reduce using rule 12 (statement -> break_statement .)
    ALL             reduce using rule 12 (statement -> break_statement .)
    IDENTIFIER      reduce using rule 12 (statement -> break_statement .)
    IF              reduce using rule 12 (statement -> break_statement .)
    WAIT_UNTIL      reduce using rule 12 (statement -> break_statement .)
    BREAK           reduce using rule 12 (statement -> break_statement .)
    LBRACE          reduce using rule 12 (statement -> break_statement .)
    $end            reduce using rule 12 (statement -> break_statement .)
    RBRACE          reduce using rule 12 (statement -> break_statement .)


state 12

    (13) statement -> compound_statement .

    NEWLINE         reduce using rule 13 (statement -> compound_statement .)
    DELAY           reduce using rule 13 (statement -> compound_statement .)
    LPAREN          reduce using rule 13 (statement -> compound_statement .)
    ALL             reduce using rule 13 (statement -> compound_statement .)
    IDENTIFIER      reduce using rule 13 (statement -> compound_statement .)
    IF              reduce using rule 13 (statement -> compound_statement .)
    WAIT_UNTIL      reduce using rule 13 (statement -> compound_statement .)
    BREAK           reduce using rule 13 (statement -> compound_statement .)
    LBRACE          reduce using rule 13 (statement -> compound_statement .)
    $end            reduce using rule 13 (statement -> compound_statement .)
    RBRACE          reduce using rule 13 (statement -> compound_statement .)


state 13

    (46) statement -> DELAY . LPAREN expression RPAREN

    LPAREN          shift and go to state 24


state 14

    (20) action -> LPAREN . tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (21) action -> LPAREN . tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (14) tag_list -> . TAG
    (15) tag_list -> . tag_list TAG

    TAG             shift and go to state 26

    tag_list                       shift and go to state 25

state 15

    (28) assignment -> IDENTIFIER . ASSIGN expression
    (29) assignment -> IDENTIFIER . DECLARE expression

    ASSIGN          shift and go to state 27
    DECLARE         shift and go to state 28


state 16

    (22) all_action -> ALL . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (23) all_action -> ALL . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN

    LPAREN          shift and go to state 29


state 17

    (43) if_statement -> IF . LPAREN condition_list RPAREN compound_statement else_clause

    LPAREN          shift and go to state 30


state 18

    (60) wait_statement -> WAIT_UNTIL . LPAREN condition_list RPAREN
    (61) wait_statement -> WAIT_UNTIL . LPAREN period_time RPAREN

    LPAREN          shift and go to state 31


state 19

    (69) break_statement -> BREAK .

    NEWLINE         reduce using rule 69 (break_statement -> BREAK .)
    DELAY           reduce using rule 69 (break_statement -> BREAK .)
    LPAREN          reduce using rule 69 (break_statement -> BREAK .)
    ALL             reduce using rule 69 (break_statement -> BREAK .)
    IDENTIFIER      reduce using rule 69 (break_statement -> BREAK .)
    IF              reduce using rule 69 (break_statement -> BREAK .)
    WAIT_UNTIL      reduce using rule 69 (break_statement -> BREAK .)
    BREAK           reduce using rule 69 (break_statement -> BREAK .)
    LBRACE          reduce using rule 69 (break_statement -> BREAK .)
    $end            reduce using rule 69 (break_statement -> BREAK .)
    RBRACE          reduce using rule 69 (break_statement -> BREAK .)


state 20

    (42) compound_statement -> LBRACE . statement_list RBRACE
    (2) statement_list -> . statement
    (3) statement_list -> . statement NEWLINE statement_list
    (4) statement_list -> . statement statement_list
    (5) statement_list -> . NEWLINE statement_list
    (6) statement_list -> . empty
    (7) statement -> . action
    (8) statement -> . all_action
    (9) statement -> . assignment
    (10) statement -> . if_statement
    (11) statement -> . wait_statement
    (12) statement -> . break_statement
    (13) statement -> . compound_statement
    (46) statement -> . DELAY LPAREN expression RPAREN
    (68) empty -> .
    (20) action -> . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (21) action -> . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (22) all_action -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (23) all_action -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (28) assignment -> . IDENTIFIER ASSIGN expression
    (29) assignment -> . IDENTIFIER DECLARE expression
    (43) if_statement -> . IF LPAREN condition_list RPAREN compound_statement else_clause
    (60) wait_statement -> . WAIT_UNTIL LPAREN condition_list RPAREN
    (61) wait_statement -> . WAIT_UNTIL LPAREN period_time RPAREN
    (69) break_statement -> . BREAK
    (42) compound_statement -> . LBRACE statement_list RBRACE

    NEWLINE         shift and go to state 4
    DELAY           shift and go to state 13
    RBRACE          reduce using rule 68 (empty -> .)
    LPAREN          shift and go to state 14
    ALL             shift and go to state 16
    IDENTIFIER      shift and go to state 15
    IF              shift and go to state 17
    WAIT_UNTIL      shift and go to state 18
    BREAK           shift and go to state 19
    LBRACE          shift and go to state 20

    statement_list                 shift and go to state 32
    statement                      shift and go to state 3
    empty                          shift and go to state 5
    action                         shift and go to state 6
    all_action                     shift and go to state 7
    assignment                     shift and go to state 8
    if_statement                   shift and go to state 9
    wait_statement                 shift and go to state 10
    break_statement                shift and go to state 11
    compound_statement             shift and go to state 12

state 21
